# mate-keyring

./: AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in
.tx/: config
daemon/: Makefile.am  gkd-capability.c  gkd-capability.h  gkd-glue.c  gkd-glue.h  gkd-main.c  gkd-main.h  gkd-pkcs11.c  gkd-pkcs11.h  gkd-util.c  gkd-util.h  mate-keyring-gpg.desktop.in.in  mate-keyring-pkcs11.desktop.in.in  mate-keyring-secrets.desktop.in.in  mate-keyring-ssh.desktop.in.in
daemon/control/: Makefile.am  gkd-control-client.c  gkd-control-codes.h  gkd-control-server.c  gkd-control.h
daemon/dbus/: Makefile.am  gkd-dbus-environment.c  gkd-dbus-private.h  gkd-dbus-secrets.c  gkd-dbus-session.c  gkd-dbus-util.c  gkd-dbus-util.h  gkd-dbus.c  gkd-dbus.h  gkd-secret-change.c  gkd-secret-change.h  gkd-secret-create.c  gkd-secret-create.h  gkd-secret-dispatch.c  gkd-secret-dispatch.h  gkd-secret-error.c  gkd-secret-error.h  gkd-secret-introspect.c  gkd-secret-introspect.h  gkd-secret-lock.c  gkd-secret-lock.h  gkd-secret-objects.c  gkd-secret-objects.h  gkd-secret-prompt.c  gkd-secret-prompt.h  gkd-secret-property.c  gkd-secret-property.h  gkd-secret-secret.c  gkd-secret-secret.h  gkd-secret-service.c  gkd-secret-service.h  gkd-secret-session.c  gkd-secret-session.h  gkd-secret-types.h  gkd-secret-unlock.c  gkd-secret-unlock.h  gkd-secret-util.c  (+1 more)
docs/: Makefile.in
egg/: Makefile.am  egg-asn1-defs.h  egg-asn1x.c  egg-asn1x.h  egg-buffer.c  egg-buffer.h  egg-byte-array.c  egg-byte-array.h  egg-cleanup.c  egg-cleanup.h  egg-dbus.c  egg-dbus.h  egg-dh.c  egg-dh.h  egg-dn.c  egg-dn.h  egg-entry-buffer.c  egg-entry-buffer.h  egg-error.h  egg-hex.c  egg-hex.h  egg-hkdf.c  egg-hkdf.h  egg-libgcrypt.c  egg-libgcrypt.h  egg-mkdtemp.c  egg-mkdtemp.h  egg-oid.c  egg-oid.h  egg-openssl.c  egg-openssl.h  egg-padding.c  egg-padding.h  egg-secure-memory.c  egg-secure-memory.h  egg-spawn.c  egg-spawn.h  egg-symkey.c  egg-symkey.h  egg-testing.c  (+3 more)
gck/: Makefile.am  gck-attributes.c  gck-call.c  gck-dump.c  gck-enumerator.c  gck-misc.c  gck-mock.c  gck-mock.h  gck-module.c  gck-modules.c  gck-object.c  gck-private.h  gck-session.c  gck-slot.c  gck-test.c  gck-test.h  gck-uri.c  gck.h  mate-gck.pc.in  pkcs11.h
gck/tests/: Makefile.am  test-gck-attributes.i  test-gck-crypto.i  test-gck-enumerator.i  test-gck-module.i  test-gck-modules.i  test-gck-object.i  test-gck-session.i  test-gck-slot.i  test-gck-uri.c  test-gck-uri.i  test-gck.h  test-suite.c  test-suite.h
gcr/: Makefile.am  gcr-certificate-basics-widget.h  gcr-certificate-chain.c  gcr-certificate-chain.h  gcr-certificate-details-widget.h  gcr-certificate-renderer.c  gcr-certificate-renderer.h  gcr-certificate-widget.c  gcr-certificate-widget.h  gcr-certificate.c  gcr-certificate.h  gcr-display-scrolled.c  gcr-display-scrolled.h  gcr-display-view.c  gcr-display-view.h  gcr-icons.c  gcr-icons.h  gcr-import-dialog.c  gcr-import-dialog.h  gcr-importer.c  gcr-importer.h  gcr-internal.h  gcr-key-renderer.c  gcr-key-renderer.h  gcr-key-widget.c  gcr-key-widget.h  gcr-library.c  gcr-library.h  gcr-marshal.c  gcr-marshal.h  gcr-parser.c  gcr-parser.h  gcr-pkcs11-certificate.c  gcr-pkcs11-certificate.h  gcr-renderer.c  gcr-renderer.h  gcr-simple-certificate.c  gcr-simple-certificate.h  gcr-trust.c  gcr-trust.h  (+8 more)
man/: Makefile.am  mate-keyring-daemon.1  mate-keyring.1
pam/: Makefile.am  gkr-pam-client.c  gkr-pam-module.c  gkr-pam-stubs.c  gkr-pam.h
pkcs11/: Makefile.am  pkcs11i.h
pkcs11/mate2-store/: Makefile.am  Makefile.in  gkm-mate2-file.c  gkm-mate2-file.h  gkm-mate2-module.c  gkm-mate2-module.h  gkm-mate2-private-key.c  gkm-mate2-private-key.h  gkm-mate2-public-key.c  gkm-mate2-public-key.h  gkm-mate2-standalone.c  gkm-mate2-storage.c  gkm-mate2-storage.h  gkm-mate2-store.h
pkcs11/mate2-store/tests/: Makefile.am  Makefile.in  dump-mate2-file.c  test-module.c  test-module.i  test-suite.c  test-suite.h  unit-test-mate2-file.c  unit-test-mate2-file.i
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  bg.po  bn.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gnome-copyrights.txt  gu.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  ky.po  (+33 more)
schema/: org.mate.crypto.cache.gschema.xml  org.mate.crypto.pgp.gschema.xml
testing/: Makefile.am  testing.c  testing.h  testing.make
tool/: Makefile.am  gkr-tool-import.c  gkr-tool-trust.c  gkr-tool-version.c  gkr-tool.c  gkr-tool.h
ui/: Makefile.am  gku-prompt-tool.c  gku-prompt-util.c  gku-prompt-util.h  gku-prompt.c  gku-prompt.h  mate-keyring-prompt.desktop.in.in
(+347 files in other folders)
